--- a/index.html
+++ b/index.html
@@ -2,15 +2,45 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta property="og:title" content="VINFix411 - Vehicle Lookup Service" />
-  <meta property="og:description" content="Find issues, specs, and tips with a personal VIN search." />
-  <meta property="og:image" content="https://example.com/your-preview-image.jpg" />
-  <meta property="og:type" content="website" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>VINFix411</title>
+  <meta property="og:title" content="VinFix411 – Vehicle Lookup Help" />
+  <meta property="og:description" content="Send us your VIN or vehicle info. We’ll send back real issues, fluid specs, and DIY help." />
+  <meta property="og:image" content="https://yourdomain.com/images/vinfix-preview.jpg" />
+  <meta property="og:type" content="website" />
+  <title>VinFix411</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 2rem;
+      font-family: Arial, sans-serif;
+      background-color: #f9f9f9;
+      color: #222;
+      text-align: center;
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+    }
+    h1 span {
+      color: #0077cc;
+    }
+    p {
+      font-size: 1.2rem;
+      max-width: 600px;
+      margin: 0 auto 1.5rem;
+    }
+    .preview {
+      max-width: 100%;
+      height: auto;
+      margin-top: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to VINFix411</h1>
-  <p>This is a placeholder. Real content coming soon.</p>
+  <h1><span>Vin</span>Fix411</h1>
+  <p>We look up the hard stuff so you don’t have to. VIN problems, specs, fluids, issues, and DIY help — sent straight to you.</p>
+  <img class="preview" src="https://yourdomain.com/images/vinfix-preview.jpg" alt="VinFix411 Preview" />
 </body>
 </html>
