--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:title" content="VinFix411 – Vehicle Lookup Help" />
-  <meta property="og:description" content="Send us your VIN or vehicle info. We’ll send back real issues, fluid specs, and DIY help." />
+  <meta property="og:description" content="Common issues, specs, fluids, and real-world troubleshooting with direct links — sent straight to you." />
   <meta property="og:image" content="https://yourdomain.com/images/vinfix-preview.jpg" />
   <meta property="og:type" content="website" />
   <title>VinFix411</title>
@@ -40,7 +40,8 @@
 </head>
 <body>
   <h1><span>Vin</span>Fix411</h1>
-  <p>We look up the hard stuff so you don’t have to. VIN problems, specs, fluids, issues, and DIY help — sent straight to you.</p>
+  <p>We look up the hard stuff so you don’t have to.<br>
+  <strong>Common issues, specs, fluid types, and real-world troubleshooting — with direct links to specific issues when needed — sent straight to you.</strong></p>
   <img class="preview" src="https://yourdomain.com/images/vinfix-preview.jpg" alt="VinFix411 Preview" />
 </body>
 </html>
