--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
 </head>
 <body>
   <h1><span>Vin</span>Fix411</h1>
-  <p>We look up the hard stuff so you don’t have to.<br>
-  <strong>Common issues, specs, fluid types, and real-world troubleshooting — with direct links to specific issues when needed — sent straight to you.</strong></p>
+  <p>
+    <strong>We look up the hard stuff — from everyday vehicles to heavy equipment.</strong><br>
+    Common issues, specs, fluid types, and real-world troubleshooting — with direct links to specific issues when needed — sent straight to you.
+  </p>
   <img class="preview" src="https://yourdomain.com/images/vinfix-preview.jpg" alt="VinFix411 Preview" />
 </body>
 </html>
