--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:title" content="VinFix411 – Vehicle Lookup Help" />
-  <meta property="og:description" content="Common issues, specs, fluids, and real-world troubleshooting with direct links — sent straight to you." />
-  <meta property="og:image" content="https://yourdomain.com/images/vinfix-preview.jpg" />
+  <meta property="og:description" content="Common issues, specs, fluid types, and real-world troubleshooting — sent straight to you." />
+  <meta property="og:image" content="https://vinfix411.netlify.app/64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" />
   <meta property="og:type" content="website" />
   <title>VinFix411</title>
   <style>
@@ -26,14 +26,13 @@
     }
     p {
       font-size: 1.2rem;
-      max-width: 600px;
+      max-width: 800px;
       margin: 0 auto 1.5rem;
     }
-    .preview {
+    .hero {
       max-width: 100%;
       height: auto;
       margin-top: 2rem;
-      border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     }
   </style>
@@ -44,6 +43,6 @@
     <strong>We look up the hard stuff — from everyday vehicles to heavy equipment.</strong><br>
     Common issues, specs, fluid types, and real-world troubleshooting — with direct links to specific issues when needed — sent straight to you.
   </p>
-  <img class="preview" src="https://yourdomain.com/images/vinfix-preview.jpg" alt="VinFix411 Preview" />
+  <img class="hero" src="64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" alt="VinFix411 engine drawing" />
 </body>
 </html>
