--- a/index.html
+++ b/index.html
@@ -9,40 +9,289 @@
   <meta property="og:type" content="website" />
   <title>VinFix411</title>
   <style>
-    body {
+    * {
       margin: 0;
-      padding: 2rem;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
       font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
-      color: #222;
-      text-align: center;
-    }
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
-    h1 span {
-      color: #0077cc;
-    }
-    p {
-      font-size: 1.2rem;
-      max-width: 800px;
-      margin: 0 auto 1.5rem;
+      background-color: #000;
+      color: #fff;
     }
     .hero {
-      max-width: 100%;
+      position: relative;
+      width: 100%;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    .hero img {
+      width: 100%;
       height: auto;
-      margin-top: 2rem;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      display: block;
+    }
+    .overlay-text {
+      position: absolute;
+      top: 8%;
+      left: 50%;
+      transform: translateX(-50%);
+      text-align: center;
+      color: #fff;
+      text-shadow: 1px 1px 4px #000;
+      padding: 0 1rem;
+    }
+    .overlay-text h1 {
+      font-size: 3rem;
+    }
+    .overlay-text h1 span {
+      color: #00b3ff;
+    }
+    .overlay-text p {
+      font-size: 1.2rem;
+      margin-top: 1rem;
+      max-width: 800px;
+    }
+    @media (max-width: 768px) {
+      .overlay-text h1 {
+        font-size: 2rem;
+      }
+      .overlay-text p {
+        font-size: 1rem;
+      }
     }
   </style>
 </head>
 <body>
-  <h1><span>Vin</span>Fix411</h1>
-  <p>
-    <strong>We look up the hard stuff — from everyday vehicles to heavy equipment.</strong><br>
-    Common issues, specs, fluid types, and real-world troubleshooting — with direct links to specific issues when needed — sent straight to you.
-  </p>
-  <img class="hero" src="64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" alt="VinFix411 engine drawing" />
+  <div class="hero">
+    <img src="64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" alt="Engine Drawing with Brown Background" />
+    <div class="overlay-text">
+      <h1><span>Vin</span>Fix411</h1>
+      <p><strong>We look up the hard stuff — from everyday vehicles to heavy equipment.</strong><br>
+        Common issues, specs, fluid types, and real-world troubleshooting — with direct links to specific issues when needed — sent straight to you.
+      </p>
+    </div>
+  </div>
+</body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:title" content="VinFix411 – Vehicle Lookup Help" />
+  <meta property="og:description" content="Common issues, specs, fluid types, and real-world troubleshooting — sent straight to you." />
+  <meta property="og:image" content="https://vinfix411.netlify.app/64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" />
+  <meta property="og:type" content="website" />
+  <title>VinFix411</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #000;
+      color: #fff;
+    }
+    .hero {
+      position: relative;
+      width: 100%;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    .hero img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+    .overlay-text {
+      position: absolute;
+      top: 8%;
+      left: 50%;
+      transform: translateX(-50%);
+      text-align: center;
+      color: #fff;
+      text-shadow: 1px 1px 4px #000;
+      padding: 0 1rem;
+    }
+    .overlay-text h1 {
+      font-size: 3rem;
+    }
+    .overlay-text h1 span {
+      color: #00b3ff;
+    }
+    .overlay-text p {
+      font-size: 1.2rem;
+      margin-top: 1rem;
+      max-width: 800px;
+    }
+    @media (max-width: 768px) {
+      .overlay-text h1 {
+        font-size: 2rem;
+      }
+      .overlay-text p {
+        font-size: 1rem;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="hero">
+    <img src="64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" alt="Engine Drawing with Brown Background" />
+    <div class="overlay-text">
+      <h1><span>Vin</span>Fix411</h1>
+      <p><strong>We look up the hard stuff — from everyday vehicles to heavy equipment.</strong><br>
+        Common issues, specs, fluid types, and real-world troubleshooting — with direct links to specific issues when needed — sent straight to you.
+      </p>
+    </div>
+  </div>
+</body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:title" content="VinFix411 – Vehicle Lookup Help" />
+  <meta property="og:description" content="Common issues, specs, fluid types, and real-world troubleshooting — sent straight to you." />
+  <meta property="og:image" content="https://vinfix411.netlify.app/64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" />
+  <meta property="og:type" content="website" />
+  <title>VinFix411</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #000;
+      color: #fff;
+    }
+    .hero {
+      position: relative;
+      width: 100%;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    .hero img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+    .overlay-text {
+      position: absolute;
+      top: 8%;
+      left: 50%;
+      transform: translateX(-50%);
+      text-align: center;
+      color: #fff;
+      text-shadow: 1px 1px 4px #000;
+      padding: 0 1rem;
+    }
+    .overlay-text h1 {
+      font-size: 3rem;
+    }
+    .overlay-text h1 span {
+      color: #00b3ff;
+    }
+    .overlay-text p {
+      font-size: 1.2rem;
+      margin-top: 1rem;
+      max-width: 800px;
+    }
+    @media (max-width: 768px) {
+      .overlay-text h1 {
+        font-size: 2rem;
+      }
+      .overlay-text p {
+        font-size: 1rem;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="hero">
+    <img src="64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" alt="Engine Drawing with Brown Background" />
+    <div class="overlay-text">
+      <h1><span>Vin</span>Fix411</h1>
+      <p><strong>We look up the hard stuff — from everyday vehicles to heavy equipment.</strong><br>
+        Common issues, specs, fluid types, and real-world troubleshooting — with direct links to specific issues when needed — sent straight to you.
+      </p>
+    </div>
+  </div>
+</body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:title" content="VinFix411 – Vehicle Lookup Help" />
+  <meta property="og:description" content="Common issues, specs, fluid types, and real-world troubleshooting — sent straight to you." />
+  <meta property="og:image" content="https://vinfix411.netlify.app/64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" />
+  <meta property="og:type" content="website" />
+  <title>VinFix411</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #000;
+      color: #fff;
+    }
+    .hero {
+      position: relative;
+      width: 100%;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    .hero img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+    .overlay-text {
+      position: absolute;
+      top: 8%;
+      left: 50%;
+      transform: translateX(-50%);
+      text-align: center;
+      color: #fff;
+      text-shadow: 1px 1px 4px #000;
+      padding: 0 1rem;
+    }
+    .overlay-text h1 {
+      font-size: 3rem;
+    }
+    .overlay-text h1 span {
+      color: #00b3ff;
+    }
+    .overlay-text p {
+      font-size: 1.2rem;
+      margin-top: 1rem;
+      max-width: 800px;
+    }
+    @media (max-width: 768px) {
+      .overlay-text h1 {
+        font-size: 2rem;
+      }
+      .overlay-text p {
+        font-size: 1rem;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="hero">
+    <img src="64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" alt="Engine Drawing with Brown Background" />
+    <div class="overlay-text">
+      <h1><span>Vin</span>Fix411</h1>
+      <p><strong>We look up the hard stuff — from everyday vehicles to heavy equipment.</strong><br>
+        Common issues, specs, fluid types, and real-world troubleshooting — with direct links to specific issues when needed — sent straight to you.
+      </p>
+    </div>
+  </div>
 </body>
 </html>
