--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
       box-sizing: border-box;
     }
     body {
-      font-family: Arial, sans-serif;
       background-color: #000;
+      font-family: Arial, sans-serif;
       color: #fff;
     }
     .hero {
       position: relative;
-      width: 100%;
       max-width: 1200px;
       margin: 0 auto;
     }
@@ -32,12 +31,12 @@
     }
     .overlay-text {
       position: absolute;
-      top: 8%;
+      top: 4%; /* moved up */
       left: 50%;
       transform: translateX(-50%);
       text-align: center;
-      color: #fff;
-      text-shadow: 1px 1px 4px #000;
+      color: #ffffff;
+      text-shadow: 2px 2px 6px #000;
       padding: 0 1rem;
     }
     .overlay-text h1 {
@@ -63,229 +62,7 @@
 </head>
 <body>
   <div class="hero">
-    <img src="64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" alt="Engine Drawing with Brown Background" />
-    <div class="overlay-text">
-      <h1><span>Vin</span>Fix411</h1>
-      <p><strong>We look up the hard stuff — from everyday vehicles to heavy equipment.</strong><br>
-        Common issues, specs, fluid types, and real-world troubleshooting — with direct links to specific issues when needed — sent straight to you.
-      </p>
-    </div>
-  </div>
-</body>
-</html><!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta property="og:title" content="VinFix411 – Vehicle Lookup Help" />
-  <meta property="og:description" content="Common issues, specs, fluid types, and real-world troubleshooting — sent straight to you." />
-  <meta property="og:image" content="https://vinfix411.netlify.app/64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" />
-  <meta property="og:type" content="website" />
-  <title>VinFix411</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #000;
-      color: #fff;
-    }
-    .hero {
-      position: relative;
-      width: 100%;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-    .hero img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-    .overlay-text {
-      position: absolute;
-      top: 8%;
-      left: 50%;
-      transform: translateX(-50%);
-      text-align: center;
-      color: #fff;
-      text-shadow: 1px 1px 4px #000;
-      padding: 0 1rem;
-    }
-    .overlay-text h1 {
-      font-size: 3rem;
-    }
-    .overlay-text h1 span {
-      color: #00b3ff;
-    }
-    .overlay-text p {
-      font-size: 1.2rem;
-      margin-top: 1rem;
-      max-width: 800px;
-    }
-    @media (max-width: 768px) {
-      .overlay-text h1 {
-        font-size: 2rem;
-      }
-      .overlay-text p {
-        font-size: 1rem;
-      }
-    }
-  </style>
-</head>
-<body>
-  <div class="hero">
-    <img src="64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" alt="Engine Drawing with Brown Background" />
-    <div class="overlay-text">
-      <h1><span>Vin</span>Fix411</h1>
-      <p><strong>We look up the hard stuff — from everyday vehicles to heavy equipment.</strong><br>
-        Common issues, specs, fluid types, and real-world troubleshooting — with direct links to specific issues when needed — sent straight to you.
-      </p>
-    </div>
-  </div>
-</body>
-</html><!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta property="og:title" content="VinFix411 – Vehicle Lookup Help" />
-  <meta property="og:description" content="Common issues, specs, fluid types, and real-world troubleshooting — sent straight to you." />
-  <meta property="og:image" content="https://vinfix411.netlify.app/64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" />
-  <meta property="og:type" content="website" />
-  <title>VinFix411</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #000;
-      color: #fff;
-    }
-    .hero {
-      position: relative;
-      width: 100%;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-    .hero img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-    .overlay-text {
-      position: absolute;
-      top: 8%;
-      left: 50%;
-      transform: translateX(-50%);
-      text-align: center;
-      color: #fff;
-      text-shadow: 1px 1px 4px #000;
-      padding: 0 1rem;
-    }
-    .overlay-text h1 {
-      font-size: 3rem;
-    }
-    .overlay-text h1 span {
-      color: #00b3ff;
-    }
-    .overlay-text p {
-      font-size: 1.2rem;
-      margin-top: 1rem;
-      max-width: 800px;
-    }
-    @media (max-width: 768px) {
-      .overlay-text h1 {
-        font-size: 2rem;
-      }
-      .overlay-text p {
-        font-size: 1rem;
-      }
-    }
-  </style>
-</head>
-<body>
-  <div class="hero">
-    <img src="64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" alt="Engine Drawing with Brown Background" />
-    <div class="overlay-text">
-      <h1><span>Vin</span>Fix411</h1>
-      <p><strong>We look up the hard stuff — from everyday vehicles to heavy equipment.</strong><br>
-        Common issues, specs, fluid types, and real-world troubleshooting — with direct links to specific issues when needed — sent straight to you.
-      </p>
-    </div>
-  </div>
-</body>
-</html><!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta property="og:title" content="VinFix411 – Vehicle Lookup Help" />
-  <meta property="og:description" content="Common issues, specs, fluid types, and real-world troubleshooting — sent straight to you." />
-  <meta property="og:image" content="https://vinfix411.netlify.app/64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" />
-  <meta property="og:type" content="website" />
-  <title>VinFix411</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #000;
-      color: #fff;
-    }
-    .hero {
-      position: relative;
-      width: 100%;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-    .hero img {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-    .overlay-text {
-      position: absolute;
-      top: 8%;
-      left: 50%;
-      transform: translateX(-50%);
-      text-align: center;
-      color: #fff;
-      text-shadow: 1px 1px 4px #000;
-      padding: 0 1rem;
-    }
-    .overlay-text h1 {
-      font-size: 3rem;
-    }
-    .overlay-text h1 span {
-      color: #00b3ff;
-    }
-    .overlay-text p {
-      font-size: 1.2rem;
-      margin-top: 1rem;
-      max-width: 800px;
-    }
-    @media (max-width: 768px) {
-      .overlay-text h1 {
-        font-size: 2rem;
-      }
-      .overlay-text p {
-        font-size: 1rem;
-      }
-    }
-  </style>
-</head>
-<body>
-  <div class="hero">
-    <img src="64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" alt="Engine Drawing with Brown Background" />
+    <img src="64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" alt="Engine Drawing Background" />
     <div class="overlay-text">
       <h1><span>Vin</span>Fix411</h1>
       <p><strong>We look up the hard stuff — from everyday vehicles to heavy equipment.</strong><br>
