--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
       box-sizing: border-box;
     }
     body {
-      background-color: #000;
       font-family: Arial, sans-serif;
+      background-color: #000;
       color: #fff;
     }
     .hero {
       position: relative;
+      width: 100%;
       max-width: 1200px;
       margin: 0 auto;
     }
@@ -31,12 +32,12 @@
     }
     .overlay-text {
       position: absolute;
-      top: 4%; /* moved up */
+      top: 8%;
       left: 50%;
       transform: translateX(-50%);
       text-align: center;
-      color: #ffffff;
-      text-shadow: 2px 2px 6px #000;
+      color: #fff;
+      text-shadow: 1px 1px 4px #000;
       padding: 0 1rem;
     }
     .overlay-text h1 {
@@ -50,6 +51,21 @@
       margin-top: 1rem;
       max-width: 800px;
     }
+    .cta-button {
+      display: inline-block;
+      margin-top: 1.5rem;
+      padding: 0.75rem 1.5rem;
+      background-color: #00b3ff;
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      border-radius: 5px;
+      box-shadow: 1px 1px 3px rgba(0,0,0,0.4);
+      transition: background-color 0.3s;
+    }
+    .cta-button:hover {
+      background-color: #008ecc;
+    }
     @media (max-width: 768px) {
       .overlay-text h1 {
         font-size: 2rem;
@@ -58,17 +74,51 @@
         font-size: 1rem;
       }
     }
+    .section {
+      padding: 2rem;
+      text-align: center;
+      background-color: #111;
+    }
+    .section h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+    .section p {
+      max-width: 800px;
+      margin: 0 auto;
+      line-height: 1.6;
+    }
+    .contact {
+      background-color: #000;
+    }
+    .contact a {
+      color: #00b3ff;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
   <div class="hero">
-    <img src="64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" alt="Engine Drawing Background" />
+    <img src="64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" alt="Engine Drawing with Brown Background" />
     <div class="overlay-text">
       <h1><span>Vin</span>Fix411</h1>
       <p><strong>We look up the hard stuff — from everyday vehicles to heavy equipment.</strong><br>
         Common issues, specs, fluid types, and real-world troubleshooting — with direct links to specific issues when needed — sent straight to you.
       </p>
+      <a href="#services" class="cta-button">Explore Services</a>
     </div>
+  </div>
+
+  <div id="services" class="section">
+    <h2>What We Offer</h2>
+    <p>
+      VINFix411 provides detailed lookups on known problems, repair bulletins, specs, fluid charts, recalls, and real-world fixes — for everything from daily drivers to heavy equipment. We show you what’s wrong, why it’s wrong, and how people are fixing it — without giving away how we do it.
+    </p>
+  </div>
+
+  <div class="section contact">
+    <h2>Contact</h2>
+    <p>Email us at <a href="mailto:vinfix.lookup@gmail.com">vinfix.lookup@gmail.com</a></p>
   </div>
 </body>
 </html>
