--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     }
     .overlay-text {
       position: absolute;
-      top: 8%;
+      top: 5.5%;
       left: 50%;
       transform: translateX(-50%);
       text-align: center;
@@ -55,7 +55,7 @@
       display: inline-block;
       margin-top: 1.5rem;
       padding: 0.75rem 1.5rem;
-      background-color: #00b3ff;
+      background-color: #444;
       color: #fff;
       text-decoration: none;
       font-weight: bold;
@@ -64,7 +64,7 @@
       transition: background-color 0.3s;
     }
     .cta-button:hover {
-      background-color: #008ecc;
+      background-color: #666;
     }
     @media (max-width: 768px) {
       .overlay-text h1 {
