--- a/index.html
+++ b/index.html
@@ -109,16 +109,25 @@
     </div>
   </div>
 
-  <div id="services" class="section">
-    <h2>What We Offer</h2>
+  <div class="section" id="services">
+    <h2>What We Do</h2>
     <p>
-      VINFix411 provides detailed lookups on known problems, repair bulletins, specs, fluid charts, recalls, and real-world fixes — for everything from daily drivers to heavy equipment. We show you what’s wrong, why it’s wrong, and how people are fixing it — without giving away how we do it.
+      VINFix411 helps identify common issues, factory recalls, fluid specs, and real-world fixes for vehicles and heavy equipment. Whether it’s a warning light, stalling issue, fluid capacity, or torque spec — we’ll dig up the info and send it straight to you.
     </p>
   </div>
 
-  <div class="section contact">
+  <div class="section">
     <h2>Contact</h2>
-    <p>Email us at <a href="mailto:vinfix.lookup@gmail.com">vinfix.lookup@gmail.com</a></p>
+    <p>
+      Got a VIN or Year/Make/Model? Send it our way and we’ll do the rest.<br>
+      <strong>Email:</strong> vinfix.lookup@gmail.com
+    </p>
+  </div>
+
+  <div class="section">
+    <h2>Parts Locator</h2>
+    <p>
+      Can’t find what you need? We’ll dig up listings, sources, or matching replacements from verified sellers — eBay, salvage yards, specialty vendors — whatever it takes to help you locate the right part.
+    </p>
   </div>
 </body>
-</html>
