--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:title" content="VinFix411 – Vehicle Lookup Help" />
-  <meta property="og:description" content="Common issues, specs, fluid types, and real-world troubleshooting — sent straight to you." />
-  <meta property="og:image" content="https://vinfix411.netlify.app/64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" />
+  <meta property="og:description" content="We look up the hard stuff — from everyday vehicles to heavy equipment. Common issues, specs, fluid types, and real-world troubleshooting — with direct links to specific issues when needed — sent straight to you." />
+  <meta property="og:image" content="https://vinfix411.com/64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" />
   <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://vinfix411.com/" />
   <title>VinFix411</title>
+  <link rel="robots" href="robots.txt" />
   <style>
     * {
       margin: 0;
@@ -32,7 +34,7 @@
     }
     .overlay-text {
       position: absolute;
-      top: 5.5%;
+      top: 6%;
       left: 50%;
       transform: translateX(-50%);
       text-align: center;
@@ -51,19 +53,18 @@
       margin-top: 1rem;
       max-width: 800px;
     }
-    .cta-button {
-      display: inline-block;
+    .overlay-text .button {
       margin-top: 1.5rem;
-      padding: 0.75rem 1.5rem;
+      display: inline-block;
       background-color: #444;
-      color: #fff;
+      color: white;
       text-decoration: none;
+      padding: 0.6rem 1.2rem;
+      border-radius: 6px;
       font-weight: bold;
-      border-radius: 5px;
-      box-shadow: 1px 1px 3px rgba(0,0,0,0.4);
-      transition: background-color 0.3s;
+      transition: background-color 0.3s ease;
     }
-    .cta-button:hover {
+    .overlay-text .button:hover {
       background-color: #666;
     }
     @media (max-width: 768px) {
@@ -73,27 +74,6 @@
       .overlay-text p {
         font-size: 1rem;
       }
-    }
-    .section {
-      padding: 2rem;
-      text-align: center;
-      background-color: #111;
-    }
-    .section h2 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-    }
-    .section p {
-      max-width: 800px;
-      margin: 0 auto;
-      line-height: 1.6;
-    }
-    .contact {
-      background-color: #000;
-    }
-    .contact a {
-      color: #00b3ff;
-      text-decoration: none;
     }
   </style>
 </head>
@@ -105,29 +85,10 @@
       <p><strong>We look up the hard stuff — from everyday vehicles to heavy equipment.</strong><br>
         Common issues, specs, fluid types, and real-world troubleshooting — with direct links to specific issues when needed — sent straight to you.
       </p>
-      <a href="#services" class="cta-button">Explore Services</a>
+      <a href="#services" class="button">Explore Services</a>
+      <a href="#contact" class="button" style="margin-left: 10px;">Contact</a>
+      <a href="#parts" class="button" style="margin-left: 10px;">Parts Locator</a>
     </div>
   </div>
-
-  <div class="section" id="services">
-    <h2>What We Do</h2>
-    <p>
-      VINFix411 helps identify common issues, factory recalls, fluid specs, and real-world fixes for vehicles and heavy equipment. Whether it’s a warning light, stalling issue, fluid capacity, or torque spec — we’ll dig up the info and send it straight to you.
-    </p>
-  </div>
-
-  <div class="section">
-    <h2>Contact</h2>
-    <p>
-      Got a VIN or Year/Make/Model? Send it our way and we’ll do the rest.<br>
-      <strong>Email:</strong> vinfix.lookup@gmail.com
-    </p>
-  </div>
-
-  <div class="section">
-    <h2>Parts Locator</h2>
-    <p>
-      Can’t find what you need? We’ll dig up listings, sources, or matching replacements from verified sellers — eBay, salvage yards, specialty vendors — whatever it takes to help you locate the right part.
-    </p>
-  </div>
 </body>
+</html>
