--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:title" content="VinFix411 – Vehicle Lookup Help" />
-  <meta property="og:description" content="We look up the hard stuff — from everyday vehicles to heavy equipment. Common issues, specs, fluid types, and real-world troubleshooting — sent straight to you." />
+  <meta property="og:description" content="We look up the hard stuff — from everyday vehicles to heavy equipment. Common issues, specs, fluid types, and real-world troubleshooting — with direct links to specific issues when needed — sent straight to you." />
   <meta property="og:image" content="https://vinfix411.com/64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" />
   <meta property="og:url" content="https://vinfix411.com/" />
   <meta property="og:type" content="website" />
@@ -52,12 +52,30 @@
       margin-top: 1rem;
       max-width: 800px;
     }
+    .button {
+      display: inline-block;
+      margin-top: 1.5rem;
+      padding: 0.7rem 1.4rem;
+      background-color: #00b3ff;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 6px;
+      font-weight: bold;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.5);
+    }
+    .button:hover {
+      background-color: #0093cc;
+    }
     @media (max-width: 768px) {
       .overlay-text h1 {
         font-size: 2rem;
       }
       .overlay-text p {
         font-size: 1rem;
+      }
+      .button {
+        font-size: 0.9rem;
+        padding: 0.6rem 1.2rem;
       }
     }
   </style>
@@ -70,6 +88,7 @@
       <p><strong>We look up the hard stuff — from everyday vehicles to heavy equipment.</strong><br>
         Common issues, specs, fluid types, and real-world troubleshooting — with direct links to specific issues when needed — sent straight to you.
       </p>
+      <a href="#" class="button">Explore Services</a>
     </div>
   </div>
 </body>
