--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     }
     .overlay-text {
       position: absolute;
-      top: 8%;
+      top: 6%;
       left: 50%;
       transform: translateX(-50%);
       text-align: center;
@@ -88,8 +88,10 @@
       <p><strong>We look up the hard stuff — from everyday vehicles to heavy equipment.</strong><br>
         Common issues, specs, fluid types, and real-world troubleshooting — with direct links to specific issues when needed — sent straight to you.
       </p>
-      <a href="#" class="button">Explore Services</a>
+      <p style="margin-top: 1.5rem;">
+        <a href="#services" class="button">Explore Services</a>
+      </p>
     </div>
   </div>
 </body>
-</html>
+</html>l>
