--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta property="og:title" content="VinFix411 – Vehicle Lookup Help" />
-  <meta property="og:description" content="We look up the hard stuff — from everyday vehicles to heavy equipment. Common issues, specs, fluid types, and real-world troubleshooting — with direct links to specific issues when needed — sent straight to you." />
-  <meta property="og:image" content="https://vinfix411.com/64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" />
-  <meta property="og:url" content="https://vinfix411.com/" />
+  <meta property="og:description" content="Common issues, specs, fluid types, and real-world troubleshooting — sent straight to you." />
+  <meta property="og:image" content="https://vinfix411.netlify.app/64412241-3B5F-42FD-9598-32881EB1A16E.jpeg" />
   <meta property="og:type" content="website" />
   <title>VinFix411</title>
   <style>
@@ -33,7 +32,7 @@
     }
     .overlay-text {
       position: absolute;
-      top: 6%;
+      top: 5.5%;
       left: 50%;
       transform: translateX(-50%);
       text-align: center;
@@ -52,19 +51,20 @@
       margin-top: 1rem;
       max-width: 800px;
     }
-    .button {
+    .cta-button {
       display: inline-block;
       margin-top: 1.5rem;
-      padding: 0.7rem 1.4rem;
-      background-color: #00b3ff;
+      padding: 0.75rem 1.5rem;
+      background-color: #444;
       color: #fff;
       text-decoration: none;
-      border-radius: 6px;
       font-weight: bold;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.5);
+      border-radius: 5px;
+      box-shadow: 1px 1px 3px rgba(0,0,0,0.4);
+      transition: background-color 0.3s;
     }
-    .button:hover {
-      background-color: #0093cc;
+    .cta-button:hover {
+      background-color: #666;
     }
     @media (max-width: 768px) {
       .overlay-text h1 {
@@ -73,10 +73,27 @@
       .overlay-text p {
         font-size: 1rem;
       }
-      .button {
-        font-size: 0.9rem;
-        padding: 0.6rem 1.2rem;
-      }
+    }
+    .section {
+      padding: 2rem;
+      text-align: center;
+      background-color: #111;
+    }
+    .section h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+    .section p {
+      max-width: 800px;
+      margin: 0 auto;
+      line-height: 1.6;
+    }
+    .contact {
+      background-color: #000;
+    }
+    .contact a {
+      color: #00b3ff;
+      text-decoration: none;
     }
   </style>
 </head>
@@ -88,10 +105,29 @@
       <p><strong>We look up the hard stuff — from everyday vehicles to heavy equipment.</strong><br>
         Common issues, specs, fluid types, and real-world troubleshooting — with direct links to specific issues when needed — sent straight to you.
       </p>
-      <p style="margin-top: 1.5rem;">
-        <a href="#services" class="button">Explore Services</a>
-      </p>
+      <a href="#services" class="cta-button">Explore Services</a>
     </div>
   </div>
+
+  <div class="section" id="services">
+    <h2>What We Do</h2>
+    <p>
+      VINFix411 helps identify common issues, factory recalls, fluid specs, and real-world fixes for vehicles and heavy equipment. Whether it’s a warning light, stalling issue, fluid capacity, or torque spec — we’ll dig up the info and send it straight to you.
+    </p>
+  </div>
+
+  <div class="section">
+    <h2>Contact</h2>
+    <p>
+      Got a VIN or Year/Make/Model? Send it our way and we’ll do the rest.<br>
+      <strong>Email:</strong> vinfix.lookup@gmail.com
+    </p>
+  </div>
+
+  <div class="section">
+    <h2>Parts Locator</h2>
+    <p>
+      Can’t find what you need? We’ll dig up listings, sources, or matching replacements from verified sellers — eBay, salvage yards, specialty vendors — whatever it takes to help you locate the right part.
+    </p>
+  </div>
 </body>
-</html>l>
