--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
       top:3%;
       left:50%;
       transform:translateX(-50%);
-      font-size:3rem;
+      font-size:3.8rem; /* bigger */
       font-weight:900;
-      color:#fff;
-      text-shadow:2px 2px 6px rgba(0,0,0,0.8);
+      color:#000; /* black text */
+      text-shadow:1px 1px 2px rgba(255,255,255,0.6); /* subtle light outline */
       text-align:center;
       white-space:nowrap;
     }
@@ -64,7 +64,7 @@
     @media (max-width: 768px) {
       .brand { font-size:1.75rem; }
       .links a { margin-left:0.9rem; font-size:0.95rem; }
-      .hero-top-text { font-size:2rem; top:5%; }
+      .hero-top-text { font-size:2.5rem; top:5%; }
       .headline h1 { font-size:2rem; }
       .headline p { font-size:1rem; }
     }
