--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
       white-space:nowrap;
     }
     .hero-top-text .site-name {
-      font-size:3.8rem;
+      font-size:4.2rem; /* bigger */
       font-weight:900;
     }
     .hero-top-text .email {
-      font-size:1.5rem;
+      font-size:1.8rem; /* bigger */
       font-weight:600;
       margin-top:0.3rem;
       display:block;
@@ -72,8 +72,8 @@
     @media (max-width: 768px) {
       .brand { font-size:1.75rem; }
       .links a { margin-left:0.9rem; font-size:0.95rem; }
-      .hero-top-text .site-name { font-size:2.5rem; }
-      .hero-top-text .email { font-size:1.1rem; }
+      .hero-top-text .site-name { font-size:2.7rem; }
+      .hero-top-text .email { font-size:1.3rem; }
       .headline h1 { font-size:2rem; }
       .headline p { font-size:1rem; }
     }
@@ -110,7 +110,7 @@
   <div class="section" id="services">
     <h2>What We Do</h2>
     <p>
-      VINFix411 helps identify common issues, factory recalls, fluid specs, and real-world fixes for vehicles and heavy equipment. Whether it’s a warning light, stalling issue, fluid capacity, or torque spec — we’ll dig up the info and send it straight to you.
+      VinFix411 helps identify common issues, factory recalls, fluid specs, and real-world fixes for vehicles and heavy equipment. Whether it’s a warning light, stalling issue, fluid capacity, or torque spec — we’ll dig up the info and send it straight to you.
     </p>
   </div>
 
